<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:orientation="vertical" >    <TextView        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginLeft="90px"        android:text="@string/seachtitle"        android:textSize="16sp" />    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginLeft="60px"        android:layout_marginTop="10px"        android:orientation="horizontal" >        <EditText            android:layout_width="200px"            android:layout_height="50px"            android:layout_marginLeft="40px"            android:text=""            android:textSize="12sp" />        <Button            android:id="@+id/searchbutton"            android:layout_width="wrap_content"            android:layout_height="50px"            android:text="Search"            android:textSize="12sp" >        </Button>    </LinearLayout>    <TableRow        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginLeft="10px"        android:layout_marginTop="10px" >        <Button            android:id="@+id/typebutton1"            android:layout_width="155px"            android:layout_height="fill_parent"            android:text="@string/type1_name"            android:textSize="12sp" >        </Button>        <Button            android:id="@+id/typebutton2"            android:layout_width="155px"            android:layout_height="fill_parent"            android:text="@string/type2_name"            android:textSize="12sp" >        </Button>        <Button            android:id="@+id/typebutton3"            android:layout_width="155px"            android:layout_height="fill_parent"            android:text="@string/type3_name"            android:textSize="12sp" >        </Button>    </TableRow>    <TableRow        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginLeft="10px"        android:layout_marginTop="10px" >        <Button            android:id="@+id/typebutton4"            android:layout_width="155px"            android:layout_height="fill_parent"            android:text="@string/type4_name"            android:textSize="12sp" >        </Button>        <Button            android:id="@+id/typebutton5"            android:layout_width="155px"            android:layout_height="fill_parent"            android:text="@string/type5_name"            android:textSize="12sp" >        </Button>        <Button            android:id="@+id/typebutton6"            android:layout_width="155px"            android:layout_height="fill_parent"            android:text="@string/type6_name"            android:textSize="12sp" >        </Button>    </TableRow>    <TextView        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="10px"        android:text="----------------------------Great Popularity!---------------------------"        android:textSize="12sp" />    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="10px"        android:orientation="horizontal" >        <ImageView            android:layout_width="120px"            android:layout_height="wrap_content"            android:layout_marginLeft="15px"            android:src="@drawable/fe21" />        <CheckBox            android:id="@+id/popgroup1"            android:layout_width="wrap_content"            android:layout_height="fill_parent"            android:layout_marginLeft="10px"            android:layout_marginTop="05px"            android:paddingLeft="80px"            android:text="@string/pop1_name" />    </LinearLayout>    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20px"        android:orientation="horizontal" >        <ImageView            android:layout_width="120px"            android:layout_height="wrap_content"            android:layout_marginLeft="15px"            android:src="@drawable/bike" />        <CheckBox            android:id="@+id/popgroup2"            android:layout_width="wrap_content"            android:layout_height="fill_parent"            android:layout_marginLeft="10px"            android:layout_marginTop="05px"            android:paddingLeft="80px"            android:text="@string/pop2_name" />    </LinearLayout>    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20px"        android:orientation="horizontal" >        <ImageView            android:layout_width="120px"            android:layout_height="wrap_content"            android:layout_marginLeft="15px"            android:src="@drawable/usa" />        <CheckBox            android:id="@+id/popgroup3"            android:layout_width="wrap_content"            android:layout_height="fill_parent"            android:layout_marginLeft="10px"            android:layout_marginTop="05px"            android:paddingLeft="80px"            android:text="@string/pop3_name" />    </LinearLayout>    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="30px"        android:orientation="horizontal" >        <Button            android:id="@+id/popbackbutton"            android:layout_width="125px"            android:layout_height="wrap_content"            android:layout_marginLeft="97px"            android:text="@string/backbutton_name"            android:textSize="14sp" >        </Button>        <Button            android:id="@+id/popjoinbutton"            android:layout_width="125px"            android:layout_height="wrap_content"            android:layout_marginLeft="20px"            android:text="@string/joinbutton_name"            android:textSize="14sp" >>        </Button>    </LinearLayout></LinearLayout>