<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	
	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20px">
    	<ImageView
    		android:src="@drawable/fe21"
    		android:layout_height="wrap_content" android:layout_marginLeft="15px" android:layout_width="120px"/>
 			
 		<CheckBox
 			android:id="@+id/shoppinggroup1"
 			android:layout_width="wrap_content"
 			android:layout_marginLeft="10px"
 			android:text="@string/shop1_name" android:paddingLeft="80px" android:layout_marginTop="05px" android:layout_height="fill_parent"/>
    	
    </LinearLayout>
    
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20px">
    	<ImageView
    		android:src="@drawable/sogo"
    		android:layout_height="wrap_content" android:layout_marginLeft="15px" android:layout_width="120px"/>
 			
 		<CheckBox
 			android:id="@+id/shoppinggroup2"
 			android:layout_width="wrap_content"
 			android:layout_marginLeft="10px"
 			android:text="@string/shop2_name" android:paddingLeft="80px" android:layout_height="fill_parent" android:layout_marginTop="05px"/>
    	
    </LinearLayout>
    
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" android:layout_marginTop="30px">
    	
    	<Button
    		android:id="@+id/shopbackbutton"
    		android:layout_height="wrap_content"
    		android:text="@string/backbutton_name"
    		android:textSize="14sp" android:layout_marginLeft="97px" android:layout_width="125px">
    	</Button>
    
    	<Button
    		android:id="@+id/shopjoinbutton"
    		android:layout_height="wrap_content"
    		android:text="@string/joinbutton_name"
    		android:textSize="14sp" android:layout_marginLeft="20px" android:layout_width="125px">>
    	</Button>
    
    </LinearLayout>
	
</LinearLayout>