<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TableRow>

        <ImageView
            android:id="@+id/Result_activity_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Result_group_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/beauti"
            android:textSize="25px" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hintr_1"
            android:textColor="#000000"
            android:textSize="20px" />
    </TableRow>

    <TableLayout
        android:id="@+id/Result_frilayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintr_2"
        android:textColor="#000000"
        android:textSize="20px" />

    <TextView
        android:id="@+id/Result_destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintr_3"
        android:textColor="#000000"
        android:textSize="18px" />

    <TableLayout
        android:id="@+id/Result_timelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10px" >

        <Button
            android:id="@+id/joinr_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinr_ok" />
    </LinearLayout>

</TableLayout>