<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:background="@drawable/background"    android:orientation="vertical" >    <RelativeLayout        android:id="@+id/relativeLayout1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentRight="true"        android:layout_marginLeft="5dp"        android:layout_marginRight="5dp"        android:layout_marginTop="7dp"        android:gravity="center_vertical|center_horizontal" >        <ImageView            android:id="@+id/loginImage"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:layout_centerVertical="true"            android:src="@drawable/login" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/relativeLayout2"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentRight="true"        android:layout_below="@+id/relativeLayout1"        android:layout_marginLeft="5dp"        android:layout_marginRight="5dp"        android:layout_marginTop="10dp"        android:gravity="center_vertical|center_horizontal" >        <TextView            android:id="@+id/idText"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/idlabel_name"            android:textColor="#000000"            android:textSize="18sp" />        <com.join.LineEditText            android:id="@+id/idEdit"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_toRightOf="@+id/idText"            android:background="@null"            android:maxLength="11"            android:singleLine="true"            android:text=""            android:textColor="@null"            android:textSize="14sp" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/relativeLayout3"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentRight="true"        android:layout_below="@+id/relativeLayout2"        android:layout_marginLeft="5dp"        android:layout_marginRight="5dp"        android:layout_marginTop="7dp"        android:gravity="center_vertical|center_horizontal" >        <TextView            android:id="@+id/passwordText"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/passwordlabel_name"            android:textColor="#000000"            android:textSize="18sp" />        <com.join.LineEditText            android:id="@+id/passwordEdit"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_toRightOf="@+id/passwordText"            android:background="@null"            android:maxLength="14"            android:password="true"            android:singleLine="true"            android:text=""            android:textColor="@null"            android:textSize="12sp" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/relativeLayout4"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentRight="true"        android:layout_below="@+id/relativeLayout3"        android:layout_marginLeft="30dp"        android:layout_marginRight="30dp"        android:layout_marginTop="10dp"        android:gravity="center_vertical|center_horizontal" >        <Button            android:id="@+id/loginButton"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/loginbutton_name"            android:textSize="14sp" >        </Button>    </RelativeLayout>    <RelativeLayout        android:id="@+id/relativeLayout5"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentRight="true"        android:layout_below="@+id/relativeLayout4"        android:layout_marginLeft="30dp"        android:layout_marginRight="30dp"        android:layout_marginTop="10dp"        android:gravity="center_vertical|center_horizontal" >        <Spinner            android:id="@+id/serverSpinner"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="test" >        </Spinner>    </RelativeLayout>    <RelativeLayout        android:id="@+id/relativeLayout6"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentRight="true"        android:layout_below="@+id/relativeLayout5"        android:layout_marginLeft="5dp"        android:layout_marginRight="5dp"        android:layout_marginTop="7dp"        android:gravity="center_vertical|center_horizontal" >        <Button            android:id="@+id/registerButton"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:background="@null"            android:text="@string/registerbutton_name"            android:textSize="14sp" />    </RelativeLayout></RelativeLayout>